--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "description": "CLI tool to make flowcharts of git repositories",
   "main": "build/index.js",
   "scripts": {
-    "build":"tsc",
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon --watch src --watch config --exec \"ts-node src/index.ts\""
+    "dev": "nodemon --watch src --watch config --exec \"./script.sh\""
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^20.14.11",
+    "@types/readline-sync": "^1.4.8",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.3"
   },
@@ -19,7 +20,9 @@
     "axios": "^1.7.3",
     "chalk": "^5.3.0",
     "commander": "^12.1.0",
-    "gg": "^0.1.3",
+    "nodemon": "^3.1.4",
+    "readline": "^1.3.0",
+    "readline-sync": "^1.4.10",
     "simple-git": "^3.25.0"
   },
   "bin": {
